fixed wrong scrollbar display on non-firefox browsers

--- a/static/css/bases/base_style.css
+++ b/static/css/bases/base_style.css
@@ -52,7 +52,7 @@ body{
 ::-webkit-scrollbar-thumb:hover {
     background: #555;
 }
-body, *{
+html[user-agent=Firefox] body, html[user-agent=Firefox] *{
     scrollbar-width: thin !important;
     scrollbar-color: #888 #555;
 }
